sandbox/output
ItemTest.java:12: error: cannot find symbol
        assertEquals(9,item.getQuality());
                           ^
  symbol:   method getQuality()
  location: variable item of type Item
1 error
